--- a/pages/videos.html
+++ b/pages/videos.html
@@ -41,12 +41,12 @@
         </div>
     </header>
     <hr class="hr1">
-    <div class="videoT1">
+    <div class="videoT1" data-aos="zoom-in" data-aos-duration="1000">
         <p class="h2">
             The Absolutely Understand Guitar Video Series
         </p>
     </div>
-    <div class="video1">
+    <div class="video1" data-aos="fade-up" data-aos-duration="1500">
         <iframe width="560" height="315" 
             src="https://www.youtube.com/embed/Gg1L-sBIxnY?si=WuWY-ICSXA8TsnHe" 
             title="YouTube video player" 
@@ -56,12 +56,12 @@
         </iframe>
     </div>
     <hr class="hr2">
-    <div class="videoT2">
+    <div class="videoT2" data-aos="zoom-in" data-aos-duration="1000">
         <p class="h2">
             The Ear Training Series
         </p>
     </div>
-    <div class="video2">
+    <div class="video2" data-aos="fade-up" data-aos-duration="1500">
         <iframe width="560" height="315" 
             src="https://www.youtube.com/embed/erelNRRYXUA?si=_ry3L4LYculn0AaP" 
             title="YouTube video player" 
@@ -71,12 +71,12 @@
         </iframe>
     </div>
     <hr class="hr3">
-    <div class="videoT3">
+    <div class="videoT3" data-aos="zoom-in" data-aos-duration="1000">
         <p class="h2">
             Some of Scotty's playing with <span class="fst-italic">The Experimental Ensemble of Cape Cod</span>! 
         </p>
     </div>
-    <div class="video3">
+    <div class="video3" data-aos="fade-up" data-aos-duration="1500">
         <iframe width="560" height="315" 
                 src="https://www.youtube.com/embed/sbQEQHQ5HX4?si=xyl2xAsaOxEAunVO" 
                 title="YouTube video player" 
