--- a/404.html
+++ b/404.html
@@ -8,8 +8,8 @@
     <title>404! - Absolutely Understand Guitar</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="./style/style.css">
-    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="/absolutelyUnderstandGuitar/style/style.css">
+    <link rel="shortcut icon" href="/absolutelyUnderstandGuitar/images/favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -30,11 +30,11 @@
                 <div class="collapse navbar-collapse" id="navbarContent">
                     <div class="container-fluid">
                         <div class="navbar-nav d-flex flex-row justify-content-center gap-5 p-2 m-2">
-                            <a class="nav-item nav-link" href="#top">Home</a>
-                            <a class="nav-item nav-link" href="./pages/about.html">About</a>
-                            <a class="nav-item nav-link" href="./pages/videos.html">Videos</a>
-                            <a class="nav-item nav-link" href="./pages/program.html">Program</a>
-                            <a class="nav-item nav-link" href="./pages/scotty.html">About Scotty</a>
+                            <a class="nav-item nav-link" href="/absolutelyUnderstandGuitar/index.html">Home</a>
+                            <a class="nav-item nav-link" href="/absolutelyUnderstandGuitar/pages/about.html"">About</a>
+                            <a class="nav-item nav-link" href="/absolutelyUnderstandGuitar/pages/videos.html">Videos</a>
+                            <a class="nav-item nav-link" href="/absolutelyUnderstandGuitar/pages/program.html">Program</a>
+                            <a class="nav-item nav-link" href="/absolutelyUnderstandGuitar/pages/scotty.html">About Scotty</a>
                         </div>
                     </div>
                 </div>
@@ -47,7 +47,7 @@
     </div>
     <hr class="hr2">
     <div class="scotty404">
-        <img src="./images/scotty404.jpg" alt="Scotty's Page Not Found face!">
+        <img src="/absolutelyUnderstandGuitar/images/scotty404.jpg" alt="Scotty's Page Not Found face!">
     </div>
     <div class="caption404">
         <p>
