--- a/pages/scotty.html
+++ b/pages/scotty.html
@@ -63,16 +63,19 @@
     <div id="carousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="4000" data-aos="zoom-in" data-aos-duration="1000">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="../images/caro0.jpg" class="d-block" ="First carousel image of Scotty">
+                <img src="../images/caro4.jpg" class="d-block" alt="First carousel image of Scotty">
             </div>
             <div class="carousel-item">
-                <img src="../images/caro1.jpg" class="d-block" alt="Second carousel image of Scotty">
+                <img src="../images/caro0.jpg" class="d-block" alt="Second carousel image of Scotty">
             </div>
             <div class="carousel-item">
-                <img src="../images/caro2.jpg" class="d-block" alt="Third carousel image of Scotty">
+                <img src="../images/caro1.jpg" class="d-block" alt="Third carousel image of Scotty">
             </div>
             <div class="carousel-item">
-                <img src="../images/caro3.jpg" class="d-block" alt="Fourth carousel image of Scotty">
+                <img src="../images/caro2.jpg" class="d-block" alt="Fourth carousel image of Scotty">
+            </div>
+            <div class="carousel-item">
+                <img src="../images/caro3.jpg" class="d-block" alt="Fifth carousel image of Scotty">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
