--- a/pages/videos.html
+++ b/pages/videos.html
@@ -43,7 +43,7 @@
     <hr class="hr1">
     <div class="videoT1" data-aos="zoom-in" data-aos-duration="1000">
         <p class="h2">
-            The Absolutely Understand Guitar Video Series
+            <a href="https://www.youtube.com/watch?v=Gg1L-sBIxnY&list=PLJwa8GA7pXCWAnIeTQyw_mvy1L7ryxxPH&index=1" target="_blank" rel="noopener noreferrer">The Absolutely Understand Guitar Video Series</a>
         </p>
     </div>
     <div class="video1" data-aos="fade-up" data-aos-duration="1500">
@@ -58,7 +58,7 @@
     <hr class="hr2">
     <div class="videoT2" data-aos="zoom-in" data-aos-duration="1000">
         <p class="h2">
-            The Ear Training Series
+            <a href="https://www.youtube.com/watch?v=erelNRRYXUA&list=PL0DEDF92CF4366923&index=1" target="_blank" rel="noopener noreferrer">The Ear Training Series</a>
         </p>
     </div>
     <div class="video2" data-aos="fade-up" data-aos-duration="1500">
@@ -73,7 +73,7 @@
     <hr class="hr3">
     <div class="videoT3" data-aos="zoom-in" data-aos-duration="1000">
         <p class="h2">
-            Some of Scotty's playing with <span class="fst-italic">The Experimental Ensemble of Cape Cod</span>! 
+            <a href="https://www.youtube.com/watch?v=sbQEQHQ5HX4" target="_blank" rel="noopener noreferrer">Some of Scotty's playing with <span>The Experimental Ensemble of Cape Cod</span>!</a>
         </p>
     </div>
     <div class="video3" data-aos="fade-up" data-aos-duration="1500">
