--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
         <div class="indexTexto1 container-fluid">
             <div class="textContainer container-fluid" data-aos="zoom-in" data-aos-duration="1000">
                 <p>
-                    "Greetings, fellow guitar enthusiasts! I'm Scotty West. Thanks for your interest in our lessons. These 32 hour-long instruction videos contain all you need to know to truly understand your instrument from the inside-out."
+                    Greetings, fellow guitar enthusiasts! I'm Scotty West. Thanks for your interest in our lessons. These 32 hour-long instruction videos contain <span class="fw-bold">all you need to know to truly understand your instrument</span> from the inside-out.
                 </p>
                 <p>
-                    <span class="fw-bold">Today, there is a dizzying selection of guitar lessons available online, in books and on video</span>. If you're having trouble making sense of it all, then look no further. Our guitar lessons have been carefully crafted to ensure that you will finally get <span class="text-warning fw-bold">"The BIG Picture"</span>. Join thousands of satisfied students worldwide and become the guitar player you always wanted to be.
+                    <span class="fw-bold">Today, there is a <span class="fst-italic text-decoration-underline">dizzying</span> selection of guitar lessons available online, in books, and on video</span>! If you're having trouble making sense of it all, then look no further: our guitar lessons have been carefully crafted, to ensure that you will finally get <span class="text-warning fw-bold">"The BIG Picture"</span>. Join thousands of satisfied students worldwide and become the guitar player you<span class="text-danger fw-bold"> always</span> wanted to be!
                 </p>
             </div>
         </div>
@@ -63,20 +63,20 @@
     <hr class="hr2">
     <div class="indexTexto2 container-fluid">
         <p data-aos="fade-up" data-aos-duration="1500">
-            There are thousands of guitar lessons out there that will show you how to place your fingers to play specific songs. You may find this fun for awhile but it's not likely to keep you satisfied for the long haul. My <span class="fw-bold">"music as language"</span> approach to guitar lessons will allow you to easily answer questions many of you have had for years and get you on the true path to creative fulfillment.
+            There are thousands of guitar lessons out there that will show you how to place your fingers to play specific songs. You may find this fun for a while, but it's not likely to keep you satisfied for the long haul. My <span class="text-warning fw-bold">"music as language"</span> approach to guitar lessons will allow you to easily answer questions many of you have had for <span class="fst-italic">years</span> and get you on the true path to <span class="text-decoration-underline">creative fulfillment</span>.
         </p>
         <hr>
         <p data-aos="fade-up" data-aos-duration="1500">
-            Some guitar lessons have you jumping around sampling this-and-that so you end up with a scattered vision of how music works. Our video guitar lessons are different. They're designed to be viewed in order so each concept flows into the next. You could learn how to play guitar as well as or even better than your favorite guitar heroes. You'll finally be able to actually "think" on your instrument ... learn songs by ear ... write your own music ... solo with power and passion. It's easy if you get it explained to you in the right way.
+            Some guitar lessons have you jumping around, sampling this-and-that, so you end up with a <span class="fst-italic">scattered vision</span> of how music works. Our video guitar lessons are different - they're designed to be viewed <span class="fw-bold">in order</span>, so each concept flows into the next. You could learn how to play guitar as well as, or even better than, your favorite guitar heroes. You'll finally be able to actually <span class="fw-bold">"think" on your instrument</span>... learn songs by ear... write your own music... and solo with <span class="text-danger fw-bold">power and passion</span>! It's easy if you get it explained to you in <span class="fw-bold">the right way</span>.
         </p>
         <p data-aos="fade-up" data-aos-duration="1500">
-            These guitar lesson videos provide a solid foundation in music theory, ear training and guitar technique all totally integrated and profoundly well organized. 
+            These guitar lesson videos provide a solid foundation in music theory, ear training and guitar technique, all <span class="text-decoration-underline">totally integrated</span> and <span class="text-decoration-underline">profoundly well organized</span>! 
         </p>
         <hr>
         <p data-aos="fade-up" data-aos-duration="1500">
-            <span class="text-warning fw-bold">WATCH SCOTTY'S FREE VIDEO GUITAR LESSONS - YOU'LL BE AMAZED AT HOW MUCH YOU WILL LEARN!</span>
+        Watch Scotty's <span class="text-warning">free video guitar lessons</span> - you'll be amazed at <span class="fw-bold text-danger">HOW MUCH YOU WILL LEARN!</span>
 
-            You can reach Scotty's main webpage at: <a href="https://www.absolutelyunderstandguitar.com">https://www.absolutelyunderstandguitar.com</a>.
+            You can reach Scotty's main webpage at: <a href="https://www.absolutelyunderstandguitar.com">https://www.absolutelyunderstandguitar.com</a>, or visit him on <a href="https://www.facebook.com/AbsolutelyUnderstandGuitar">facebook</a>.
         </p>
     </div>
     <hr class="hr3">
