--- a/pages/about.html
+++ b/pages/about.html
@@ -53,14 +53,14 @@
     <hr class="hr3">
     <div class="aboutTexto1" data-aos="fade-up" data-aos-duration="1500">
         <p>
-            Look at all you get with our <span>video guitar instruction package</span>!
-            Scotty's guitar instruction videos teach you to actually "think" on your guitar. If a picture is worth a thousand words, these 32-1 hour-long guitar instruction videos are absolutely priceless! Close-ups of guitar chord and scale finger positions, multiple camera angles and large, easy-to-read graphics make Scotty's visual method of guitar instruction unbeatable.
+            Look at all you get with our <span class="text-warning fw-bold">video guitar instruction package</span>!
+            Scotty's guitar instruction videos teach you to actually <span class="fw-bold">"think"</span> on your guitar. If a picture is worth a thousand words, these 32-1 hour-long guitar instruction videos are absolutely <span class="text-danger fw-bold fst-italic">priceless</span>! Close-ups of guitar chord and scale finger positions, multiple camera angles and large, easy-to-read graphics make Scotty's visual method of guitar instruction <span class="fw-bold">unbeatable</span>.
         </p>
     </div>
     <hr class="hr4">
     <div class="aboutTexto2" data-aos="fade-up" data-aos-duration="1500">
         <p>
-            Scotty's <span>"music as language"</span> approach to guitar instruction is the key. You understand guitar better when Scotty shows you how to do it and then explains how it all works right there on your screen! It's like having world class private guitar instruction right in your own home.
+            Scotty's <span class="text-warning fw-bold">"music as language"</span> approach to guitar instruction is the key. You understand guitar better when Scotty shows you how to <span class="fst-italic">do it</span> - and then explains how it all <span class="fst-italic">works</span>, right there on your screen! It's like having <span class="text-danger fw-bold fst-italic">world-class private guitar instruction</span>, right in your own home.
         </p>
     </div>
     <hr class="hr5">
