--- a/pages/program.html
+++ b/pages/program.html
@@ -15,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
+<div class="programGrid">
     <header class="header">
         <div class="headerImage">
             <img src="https://www.absolutelyunderstandguitar.com/templates/aug_dual_sidebar_2016_v3/images/header.png" alt="headerImage">
@@ -47,15 +48,15 @@
     <hr class="hr2">
     <div class="programText">
         <p data-aos="fade-up" data-aos-duration="1500">
-            Scotty's famous <span>color-coded guitar scale and chord fingering charts</span> are much better than those old black and white finger charts. They tell you much more than just where to position your fingers. They show you how each note functions in the scale or chord it is in, and how it works with other scales and chords in a song. This is critical for lead guitarists and folks interested in song writing and improvising.
+            Scotty's famous <span class="text-warning fw-bold">color-coded guitar scale and chord fingering charts</span> are much better than those old, black-and-white finger charts. They tell you <span class="fw-bold">much more</span> than just where to position your fingers. They show you <span class="fst-italic">how each note functions</span> in the scale or chord it is in, and how it works with other scales and chords in a song. This is <span class="fw-bold">critical</span> for lead guitarists and folks interested in song writing and improvising.
         </p>
         <hr>
         <p data-aos="fade-up" data-aos-duration="1500">
-            The official course handbook complements and reenforces the video guitar lessons making memorization and review of material a snap. All the guitar finger charts and graphics that Scotty shows you in the DVD guitar lessons are reprinted in your book so you can study them up close while viewing the video guitar lessons on your TV or PC. Created by a professional graphic artist, these charts and illustrations are simple to read and understand.
+            The <span class="text-warning fw-bold">official course handbook</span> complements and re-enforces the video guitar lessons, making memorization and review of material a <span class="fst-italic">snap</span>. All the guitar finger charts and graphics that Scotty shows you in the DVD guitar lessons are reprinted in your book, so you can study them up close while viewing the video guitar lessons on your TV or PC. Created by a <span class="text-danger font-monospace text-decoration-underline fw-bold fst-italic">professional graphic artist</span>, these charts and illustrations are <span class="fw-bold">simple</span> to read and understand.
         </p>
         <hr>
         <p data-aos="fade-up" data-aos-duration="1500">
-            This program will be focusing on the <span>6 Main Areas of Music</span>: Pitch, Rhythm, Timbre, Dynamics, Technique, and Notation. If you aspire to be a true musician and satisfy yourself with your playing, you need to master all the 6 areas! Here is a chart further explaining the concepts:
+            This program will be focusing on the <span class="text-warning fw-bold">6 Main Areas of Music</span>: Pitch, Rhythm, Timbre, Dynamics, Technique, and Notation. If you aspire to be a true musician and <span class="fst-italic">satisfy yourself with your playing</span>, you need to <span class="fw-bold">master all 6 areas</span>! Here is a chart further explaining the concepts:
         </p>
     </div>
     <hr class="hr3">
@@ -102,6 +103,7 @@
             <a href="#top">Go To Top</a>
         </footer>
     </div>    
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
