--- a/pages/scotty.html
+++ b/pages/scotty.html
@@ -15,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
+<div class="scottyGrid">
     <header class="header">
         <div class="headerImage">
             <img src="https://www.absolutelyunderstandguitar.com/templates/aug_dual_sidebar_2016_v3/images/header.png" alt="headerImage">
@@ -47,16 +48,16 @@
     <hr class="hr2">
     <div class="scottyT1">
         <p data-aos="fade-up" data-aos-duration="1500">
-            "I never really set out to be a music teacher. My mother, a symphony violinist, started me with piano lessons when I was 6 years old. I began to learn to play the guitar in 1964 when I was 10. The Beatles had just arrived in America and I just had to learn to play the guitar. From the beginning, I was the kid who *had* to know. 
+            "I never really set out to be a music teacher. My mother, a symphony violinist, started me with piano lessons when I was 6 years old. I began to learn to play the guitar in 1964, when I was 10. <span class="text-warning fw-bold">The Beatles</span> had just arrived in America - and I just <span class="fst-italic text-decoration-underline">had</span> to learn to play the guitar! From the beginning, I was the kid who *had* to know. 
         </p>
         <p data-aos="fade-up" data-aos-duration="1500">
-            My piano lessons had shown me that there was a system to the way music worked and I knew that if I wanted to learn to play guitar, I would have to understand that system. I wanted to write my own songs ... play by ear ... jam and improvise like the Beatles ... but neither my private teachers or the public school music programs taught that stuff.
+            My piano lessons had shown me that there was <span class="text-danger fw-bold">a system to the way music worked</span>, and I knew that if I wanted to learn to play guitar, <span class="fw-bold">I would have to understand that system</span>. I wanted to write my own songs... play by ear... jam and improvise like the Beatles... but neither my private teachers or the public school music programs <span class="fw-bold">taught</span> that stuff!
         </p>
     </div>
     <hr class="hr3">
     <div class="scottyT2">
         <p data-aos="fade-up" data-aos-duration="1500">
-            I tried to learn to play guitar myself. My friends would show me some chords and scales. The books I would try to read were often scattered and confusing. My music instructors didn't seem to know the answers. It's difficult to learn to play the guitar if there's no program to follow. Even so, everyone thought I was this hot guitar player. I could play the popular songs of the day ... Hendrix, Dylan, The Beatles etc. Everyone thought I was this hot-shot guitar player but I knew I was only faking it. I didn't have <span>"The BIG Picture"</span>.
+            ...I tried to learn to play guitar myself. My friends would show me some chords and scales. The books I would try to read were often <span class="fw-bold">scattered</span> and <span class="fw-bold">confusing</span>. My music instructors didn't seem to know the answers. It's difficult to learn to play the guitar if there's no <span class="text-warning fw-bold">program</span> to follow. Even so, everyone thought I was this hot guitar player. I could play the popular songs of the day... Hendrix, Dylan, The Beatles... Everyone thought I was this <span class="fw-bold">hot-shot guitar player</span>, but I knew I was only faking it. I didn't have <span class="text-danger fw-bold">"The BIG Picture"</span>.
         </p>
     </div>
     <hr class="hr4">
@@ -90,16 +91,21 @@
     <hr class="hr5">
     <div class="scottyT3">
         <p data-aos="fade-up" data-aos-duration="1500">
-            Then one summer, my luck changed. A new roommate named <span>Dan May</span> moved in with us. Dan was one of those true musical prodigies you hear about ... played the piano before he could walk ... masters degree in music composition at age 22 ... totally knowledgeable about guitar music theory and good at explaining it clearly and logically. Dan understood music inside out. He actually knew the answers to all the questions that I had been asking all those years. I would slap myself on the forehead and ask "Why didn't my other music teachers show me this stuff when I was a kid?!" <br> Dan showed me that learning to play the guitar is easy if you can find someone to explain it to you <span>the right way</span>.
-            <p class="scottyLink">
-                <a href="https://www.absolutelyunderstandguitar.com/index.php/bio">(...)</a>
-            </p>
+            Then one summer, my luck changed. A new roommate named <span class="text-warning fw-bold">Dan May</span> moved in with us. Dan was one of those <span class="fw-bold">true musical prodigies</span> you hear about: played the piano before he could walk... masters degree in music composition at age 22... totally knowledgeable about guitar music theory and good at explaining it clearly and logically. Dan <span class="fw-bold">understood music inside out</span>. He actually knew the answers to all the questions that I had been asking all those years! I would slap myself on the forehead and ask "Why didn't my other music teachers show me <span class="text-danger fw-bold">this stuff</span> when I was a kid?!"
         </p>
+        <p data-aos="fade-up" data-aos-duration="1500">
+            Dan showed me that learning to play the guitar is easy - if you can find someone to explain it to you <span class="fw-bold text-decoration-underline">the right way.</span>
+        </p>
+        <p class="scottyLink">
+            <a href="https://www.absolutelyunderstandguitar.com/index.php/bio">(...)</a>
+        </p>
+        
     </div>
     <hr class="hr6">
     <footer class="footer">
         <a href="#top">Go To Top</a>
     </footer>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
