--- a/pages/videos.html
+++ b/pages/videos.html
@@ -15,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
+<div class="videosGrid">
     <header class="header">
         <div class="headerImage">
             <img src="https://www.absolutelyunderstandguitar.com/templates/aug_dual_sidebar_2016_v3/images/header.png" alt="headerImage">
@@ -89,6 +90,7 @@
     <footer class="footer">
         <a href="#top">Go To Top</a>
     </footer>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
