--- a/pages/program.html
+++ b/pages/program.html
@@ -18,7 +18,7 @@
 <div class="programGrid">
     <header class="header">
         <div class="headerImage">
-            <img src="https://www.absolutelyunderstandguitar.com/templates/aug_dual_sidebar_2016_v3/images/header.png" alt="headerImage">
+            <img src="../images/header.png" alt="headerImage">
         </div>
         <h1>Absolutely Understand Guitar</h1>
         <h2>A Fan Tribute Page</h2>
@@ -42,8 +42,35 @@
         </div>
     </header>
     <hr class="hr1">
-    <div class="programImage" data-aos="zoom-in" data-aos-duration="1500">
-        <img src="../images/program.jpg" alt="Program Image">
+    <div id="programCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="6000" data-aos="zoom-in" data-aos-duration="1000">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="../images/carousel/caro2-1.jpg" class="d-block mx-auto" alt="First carousel image of the AUG program">
+            </div>
+            <div class="carousel-item">
+                <img src="../images/carousel/caro2-2.jpg" class="d-block mx-auto" alt="Second carousel image of the AUG program">
+            </div>
+            <div class="carousel-item">
+                <img src="../images/carousel/caro2-3.jpg" class="d-block mx-auto" alt="Third carousel image of the AUG program">
+            </div>
+            <div class="carousel-item">
+                <img src="../images/carousel/caro2-4.jpg" class="d-block mx-auto" alt="Fourth carousel image of the AUG program">
+            </div>
+            <div class="carousel-item">
+                <img src="../images/carousel/caro2-5.jpg" class="d-block mx-auto" alt="Fifth carousel image of the AUG program">
+            </div>
+            <div class="carousel-item">
+                <img src="../images/carousel/caro2-6.jpg" class="d-block mx-auto" alt="Sixth carousel image of the AUG program">
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#programCarousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#programCarousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
     </div>
     <hr class="hr2">
     <div class="programText">
@@ -100,9 +127,11 @@
     <hr class="hr4">
     <div class="footer">
         <footer>
-            <a href="#top">Go To Top</a>
+            <a href="#top">
+                <img src="../images/footerLogo.png" alt="Footer Logo - Go To Top" class="footerLogo">
+            </a>
         </footer>
-    </div>    
+    </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
