--- a/404.html
+++ b/404.html
@@ -55,9 +55,13 @@
         </p>
     </div>
     <hr class="hr3">
-    <footer class="footer">
-        <a href="#top">Go To Top</a>
-    </footer>
+    <div class="footer">
+        <footer>
+            <a href="#top">
+                <img src="../images/footerLogo.png" alt="Footer Logo - Go To Top" class="footerLogo">
+            </a>
+        </footer>
+    </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
