--- a/pages/scotty.html
+++ b/pages/scotty.html
@@ -18,7 +18,7 @@
 <div class="scottyGrid">
     <header class="header">
         <div class="headerImage">
-            <img src="https://www.absolutelyunderstandguitar.com/templates/aug_dual_sidebar_2016_v3/images/header.png" alt="headerImage">
+            <img src="../images/header.png" alt="headerImage">
         </div>
         <h1>Absolutely Understand Guitar</h1>
         <h2>A Fan Tribute Page</h2>
@@ -61,29 +61,32 @@
         </p>
     </div>
     <hr class="hr4">
-    <div id="carousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="4000" data-aos="zoom-in" data-aos-duration="1000">
+    <div id="scottyCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="4000" data-aos="zoom-in" data-aos-duration="1000">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="../images/caro4.jpg" class="d-block" alt="First carousel image of Scotty">
+                <img src="../images/carousel/caro1-1.jpg" class="d-block mx-auto" alt="First carousel image of Scotty">
             </div>
             <div class="carousel-item">
-                <img src="../images/caro0.jpg" class="d-block" alt="Second carousel image of Scotty">
+                <img src="../images/carousel/caro1-2.jpg" class="d-block mx-auto" alt="Second carousel image of Scotty">
             </div>
             <div class="carousel-item">
-                <img src="../images/caro1.jpg" class="d-block" alt="Third carousel image of Scotty">
+                <img src="../images/carousel/caro1-3.jpg" class="d-block mx-auto" alt="Third carousel image of Scotty">
             </div>
             <div class="carousel-item">
-                <img src="../images/caro2.jpg" class="d-block" alt="Fourth carousel image of Scotty">
+                <img src="../images/carousel/caro1-4.jpg" class="d-block mx-auto" alt="Fourth carousel image of Scotty">
             </div>
             <div class="carousel-item">
-                <img src="../images/caro3.jpg" class="d-block" alt="Fifth carousel image of Scotty">
+                <img src="../images/carousel/caro1-5.jpg" class="d-block mx-auto" alt="Fifth carousel image of Scotty">
+            </div>
+            <div class="carousel-item">
+                <img src="../images/carousel/caro1-6.jpg" class="d-block mx-auto" alt="Sixth carousel image of Scotty">
             </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
+        <button class="carousel-control-prev" type="button" data-bs-target="#scottyCarousel" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
+        <button class="carousel-control-next" type="button" data-bs-target="#scottyCarousel" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
         </button>
@@ -102,9 +105,13 @@
         
     </div>
     <hr class="hr6">
-    <footer class="footer">
-        <a href="#top">Go To Top</a>
-    </footer>
+    <div class="footer">
+        <footer>
+            <a href="#top">
+                <img src="../images/footerLogo.png" alt="Footer Logo - Go To Top" class="footerLogo">
+            </a>
+        </footer>
+    </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
