--- a/pages/videos.html
+++ b/pages/videos.html
@@ -18,7 +18,7 @@
 <div class="videosGrid">
     <header class="header">
         <div class="headerImage">
-            <img src="https://www.absolutelyunderstandguitar.com/templates/aug_dual_sidebar_2016_v3/images/header.png" alt="headerImage">
+            <img src="../images/header.png" alt="headerImage">
         </div>
         <h1>Absolutely Understand Guitar</h1>
         <h2>A Fan Tribute Page</h2>
@@ -87,9 +87,13 @@
         </iframe>
     </div>
     <hr class="hr4">
-    <footer class="footer">
-        <a href="#top">Go To Top</a>
-    </footer>
+    <div class="footer">
+        <footer>
+            <a href="#top">
+                <img src="../images/footerLogo.png" alt="Footer Logo - Go To Top" class="footerLogo">
+            </a>
+        </footer>
+    </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
