Fixed Index footer logo, fixed 404 page.-

--- a/404.html
+++ b/404.html
@@ -18,7 +18,7 @@
 <div class="grid404">
     <header class="header">
         <div class="headerImage">
-            <img src="https://www.absolutelyunderstandguitar.com/templates/aug_dual_sidebar_2016_v3/images/header.png" alt="headerImage">
+            <img src="/absolutelyUnderstandGuitar/images/header.png" alt="headerImage">
         </div>        
         <h1>Absolutely Understand Guitar</h1>
         <h2>A Fan Tribute Page</h2>
@@ -51,14 +51,18 @@
     </div>
     <div class="caption404">
         <p>
-            Scotty's looking for the right page for you... <br> ...Any minute now....
+            Scotty's searching for that page of yours... <br>
+            ....Any minute now....<br>
+            ... .... ...<br>
+            ... ...<br>
+            ....you're still here?!
         </p>
     </div>
     <hr class="hr3">
     <div class="footer">
         <footer>
             <a href="#top">
-                <img src="../images/footerLogo.png" alt="Footer Logo - Go To Top" class="footerLogo">
+                <img src="/absolutelyUnderstandGuitar/images/footerLogo.png" alt="Footer Logo - Go To Top" class="footerLogo">
             </a>
         </footer>
     </div>
