--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <div class="footer">
         <footer>
             <a href="#top">
-                <img src="../images/footerLogo.png" alt="Footer Logo - Go To Top" class="footerLogo">
+                <img src="./images/footerLogo.png" alt="Footer Logo - Go To Top" class="footerLogo">
             </a>
         </footer>
     </div>
