Further fixes to carousel and general mobile view.-

--- a/pages/about.html
+++ b/pages/about.html
@@ -47,7 +47,7 @@
         </p>
     </h2>
     <hr class="hr2">
-    <div class="aboutFoto1" data-aos="zoom-in" data-aos-duration="1000">
+    <div class="aboutBanner" data-aos="zoom-in" data-aos-duration="1000">
         <img src="../images/banner.jpg" class="img-fluid" alt="Scotty Banner">
     </div>
     <hr class="hr3">
