Working on HTML tags for Version 4.-

--- a/404.html
+++ b/404.html
@@ -15,58 +15,56 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-<div class="grid404">
+<main class="grid404">
     <header class="header">
-        <div class="headerImage">
+        <figure class="headerImage">
             <img src="/absolutelyUnderstandGuitar/images/header.png" alt="headerImage">
-        </div>        
+        </figure>
         <h1>Absolutely Understand Guitar</h1>
         <h2>A Fan Tribute Page</h2>
-        <div class="naviBar">
-            <nav class="navbar navbar-expand-lg">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarContent">
-                    <div class="container-fluid">
-                        <div class="navbar-nav d-flex flex-row justify-content-center gap-5 p-2 m-2">
-                            <a class="nav-item nav-link" href="/absolutelyUnderstandGuitar/index.html">Home</a>
-                            <a class="nav-item nav-link" href="/absolutelyUnderstandGuitar/pages/about.html"">About</a>
-                            <a class="nav-item nav-link" href="/absolutelyUnderstandGuitar/pages/videos.html">Videos</a>
-                            <a class="nav-item nav-link" href="/absolutelyUnderstandGuitar/pages/program.html">Program</a>
-                            <a class="nav-item nav-link" href="/absolutelyUnderstandGuitar/pages/scotty.html">About Scotty</a>
-                        </div>
+        <hr class="headerHr">
+        <nav class="navbar navbar-expand-lg">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarContent">
+                <div class="container-fluid">
+                    <div class="navbar-nav d-flex flex-row justify-content-center gap-5 p-2 m-2">
+                        <a class="nav-item nav-link" href="/absolutelyUnderstandGuitar/index.html">Home</a>
+                        <a class="nav-item nav-link" href="/absolutelyUnderstandGuitar/pages/about.html"">About</a>
+                        <a class="nav-item nav-link" href="/absolutelyUnderstandGuitar/pages/videos.html">Videos</a>
+                        <a class="nav-item nav-link" href="/absolutelyUnderstandGuitar/pages/program.html">Program</a>
+                        <a class="nav-item nav-link" href="/absolutelyUnderstandGuitar/pages/scotty.html">About Scotty</a>
                     </div>
                 </div>
-            </nav>
-        </div>
+            </div>
+        </nav>
+        <hr class="headerHr">
     </header>
-    <hr class="hr1">
-    <div class="title404">
+    <section class="title404">
         <h2>Whoops - Page Not Found!</h2>
-    </div>
-    <hr class="hr2">
-    <div class="scotty404">
+    </section>
+    <hr class="hr1">
+    <figure class="scotty404">
         <img src="/absolutelyUnderstandGuitar/images/scotty404.jpg" alt="Scotty's Page Not Found face!">
-    </div>
-    <div class="caption404">
+    </figure>
+    <article class="caption404">
         <p>
-            Scotty's searching for that page of yours... <br>
+            Scotty's searching for that page of yours...<br>
             ....Any minute now....<br>
             ... .... ...<br>
             ... ...<br>
-            ....you're still here?!
+            ... .... ...<br>
+            .....you're still here?!
         </p>
-    </div>
-    <hr class="hr3">
-    <div class="footer">
-        <footer>
-            <a href="#top">
-                <img src="/absolutelyUnderstandGuitar/images/footerLogo.png" alt="Footer Logo - Go To Top" class="footerLogo">
-            </a>
-        </footer>
-    </div>
-</div>
+    </article>
+    <hr class="hr2">
+    <footer class="footer">
+        <a href="#top">
+            <img src="/absolutelyUnderstandGuitar/images/footerLogo.png" alt="Footer Logo - Go To Top" class="footerLogo">
+        </a>
+    </footer>
+</main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
