--- a/index.html
+++ b/index.html
@@ -15,51 +15,48 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-<div class="indexGrid">
+<main class="indexGrid">
     <header class="header">
-        <div class="headerImage">
+        <figure class="headerImage">
             <img src="./images/header.png" alt="headerImage">
-        </div>        
+        </figure>        
         <h1>Absolutely Understand Guitar</h1>
         <h2>A Fan Tribute Page</h2>
-        <div class="naviBar">
-            <nav class="navbar navbar-expand-lg">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarContent">
-                    <div class="container-fluid">
-                        <div class="navbar-nav d-flex flex-row justify-content-center gap-5 p-2 m-2">
-                            <a class="nav-item nav-link" href="#top">Home</a>
-                            <a class="nav-item nav-link" href="./pages/about.html">About</a>
-                            <a class="nav-item nav-link" href="./pages/videos.html">Videos</a>
-                            <a class="nav-item nav-link" href="./pages/program.html">Program</a>
-                            <a class="nav-item nav-link" href="./pages/scotty.html">About Scotty</a>
-                        </div>
+        <hr class="headerHr">
+        <nav class="navbar navbar-expand-lg">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarContent">
+                <div class="container-fluid">
+                    <div class="navbar-nav d-flex flex-row justify-content-center gap-5 p-2 m-2">
+                        <a class="nav-item nav-link" href="#top">Home</a>
+                        <a class="nav-item nav-link" href="./pages/about.html">About</a>
+                        <a class="nav-item nav-link" href="./pages/videos.html">Videos</a>
+                        <a class="nav-item nav-link" href="./pages/program.html">Program</a>
+                        <a class="nav-item nav-link" href="./pages/scotty.html">About Scotty</a>
                     </div>
                 </div>
-            </nav>
-        </div>
+            </div>
+        </nav>
+        <hr class="headerHr">
     </header>
-    <hr class="hr1">
-    <div class="mainGrid">
-        <div class="indexImagen container-fluid" data-aos="zoom-in" data-aos-duration="1000">
+    <section class="mainGrid">
+        <figure class="indexImagen container-fluid" data-aos="zoom-in" data-aos-duration="1000">
             <img class="scottyImg img-fluid" src="./images/indexScotty.png" alt="ScottyWest">
-        </div>
-        <div class="titleContainer container-fluid" data-aos="zoom-in" data-aos-duration="1000">
+        </figure>
+        <h2 class="titleContainer container-fluid" data-aos="zoom-in" data-aos-duration="1000">
             <p class="title">WELCOME TO THE BEST GUITAR LESSONS PROGRAM!</p>
-        </div>
-        <div class="indexTexto1 container-fluid">
-            <div class="textContainer container-fluid" data-aos="zoom-in" data-aos-duration="1000">
-                <p>
+        </h2>
+        <article class="indexTexto1 container-fluid">
+                <p data-aos="zoom-in" data-aos-duration="1000">
                     Greetings, fellow guitar enthusiasts! I'm Scotty West. Thanks for your interest in our lessons. These 32 hour-long instruction videos contain <span class="fw-bold">all you need to know to truly understand your instrument</span> from the inside-out.
                 </p>
-                <p>
+                <p data-aos="zoom-in" data-aos-duration="1000">
                     <span class="fw-bold">Today, there is a <span class="fst-italic text-decoration-underline">dizzying</span> selection of guitar lessons available online, in books, and on video</span>! If you're having trouble making sense of it all, then look no further: our guitar lessons have been carefully crafted, to ensure that you will finally get <span class="text-warning fw-bold">"The BIG Picture"</span>. Join thousands of satisfied students worldwide and become the guitar player you<span class="text-danger fw-bold"> always</span> wanted to be!
                 </p>
-            </div>
-        </div>
-    </div>
+        </article>
+    </section>
     <hr class="hr2">
     <div class="indexTexto2 container-fluid">
         <p data-aos="fade-up" data-aos-duration="1500">
@@ -80,14 +77,12 @@
         </p>
     </div>
     <hr class="hr3">
-    <div class="footer">
-        <footer>
-            <a href="#top">
-                <img src="./images/footerLogo.png" alt="Footer Logo - Go To Top" class="footerLogo">
-            </a>
-        </footer>
-    </div>
-</div>
+    <footer class="footer">
+        <a href="#top">
+            <img src="./images/footerLogo.png" alt="Footer Logo - Go To Top" class="footerLogo">
+        </a>
+    </footer>
+</main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
