--- a/pages/program.html
+++ b/pages/program.html
@@ -17,31 +17,30 @@
 <body>
 <div class="programGrid">
     <header class="header">
-        <div class="headerImage">
+        <figure class="headerImage">
             <img src="../images/header.png" alt="headerImage">
-        </div>
+        </figure>
         <h1>Absolutely Understand Guitar</h1>
         <h2>A Fan Tribute Page</h2>
-        <div class="naviBar">
-            <nav class="navbar navbar-expand-lg">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarContent"">
-                    <div class="container-fluid">
-                        <div class="navbar-nav d-flex flex-row justify-content-center gap-5 p-2 m-2">
+        <hr class="headerHr">
+        <nav class="navbar navbar-expand-lg">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarContent">
+                <div class="container-fluid">
+                    <div class="navbar-nav d-flex flex-row justify-content-center gap-5 p-2 m-2">
                             <a class="nav-item nav-link" href="../index.html">Home</a>
                             <a class="nav-item nav-link" href="about.html">About</a>
                             <a class="nav-item nav-link" href="videos.html">Videos</a>
                             <a class="nav-item nav-link" href="program.html">Program</a>
                             <a class="nav-item nav-link" href="scotty.html">About Scotty</a>
-                        </div>
                     </div>
                 </div>
-            </nav>
-        </div>
+            </div>
+        </nav>
+        <hr class="headerHr">
     </header>
-    <hr class="hr1">
     <div id="programCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="6000" data-aos="zoom-in" data-aos-duration="1000">
         <div class="carousel-inner">
             <div class="carousel-item active">
