--- a/pages/videos.html
+++ b/pages/videos.html
@@ -17,31 +17,30 @@
 <body>
 <div class="videosGrid">
     <header class="header">
-        <div class="headerImage">
+        <figure class="headerImage">
             <img src="../images/header.png" alt="headerImage">
-        </div>
+        </figure>
         <h1>Absolutely Understand Guitar</h1>
         <h2>A Fan Tribute Page</h2>
-        <div class="naviBar">
-            <nav class="navbar navbar-expand-lg">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarContent"">
-                    <div class="container-fluid">
-                        <div class="navbar-nav d-flex flex-row justify-content-center gap-5 p-2 m-2">
+        <hr class="headerHr">
+        <nav class="navbar navbar-expand-lg">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarContent">
+                <div class="container-fluid">
+                    <div class="navbar-nav d-flex flex-row justify-content-center gap-5 p-2 m-2">
                             <a class="nav-item nav-link" href="../index.html">Home</a>
                             <a class="nav-item nav-link" href="about.html">About</a>
                             <a class="nav-item nav-link" href="videos.html">Videos</a>
-                            <a class="nav-item nav-link" href="program.html">Program</a>                            
+                            <a class="nav-item nav-link" href="program.html">Program</a>
                             <a class="nav-item nav-link" href="scotty.html">About Scotty</a>
-                        </div>
                     </div>
                 </div>
-            </nav>
-        </div>
+            </div>
+        </nav>
+        <hr class="headerHr">
     </header>
-    <hr class="hr1">
     <div class="videoT1" data-aos="zoom-in" data-aos-duration="1000">
         <p class="h2">
             <a href="https://www.youtube.com/watch?v=Gg1L-sBIxnY&list=PLJwa8GA7pXCWAnIeTQyw_mvy1L7ryxxPH&index=1" target="_blank" rel="noopener noreferrer">The Absolutely Understand Guitar Video Series</a>
