--- a/404.html
+++ b/404.html
@@ -46,7 +46,9 @@
     </section>
     <hr class="hr1">
     <figure class="scotty404">
-        <img src="/absolutelyUnderstandGuitar/images/scotty404.jpg" alt="Scotty's Page Not Found face!">
+        <a href="/absolutelyUnderstandGuitar/index.html">
+            <img src="/absolutelyUnderstandGuitar/images/scotty404.jpg" alt="Scotty's Page Not Found face!">
+        </a>
     </figure>
     <article class="caption404">
         <p>
