--- a/pages/scotty.html
+++ b/pages/scotty.html
@@ -99,7 +99,7 @@
             Dan showed me that learning to play the guitar is easy - if you can find someone to explain it to you <span class="fw-bold text-decoration-underline">the right way.</span>
         </p>
         <p class="scottyLink">
-            <a href="https://www.absolutelyunderstandguitar.com/index.php/bio">(...)</a>
+            <a href="https://www.absolutelyunderstandguitar.com/index.php/bio" target="_blank">(...)</a>
         </p>
         
     </div>
