Responsive Design working.-

--- a/404.html
+++ b/404.html
@@ -18,7 +18,7 @@
 <main class="grid404">
     <header class="header">
         <figure class="headerImage">
-            <img src="/absolutelyUnderstandGuitar/images/header.png" alt="headerImage">
+            <img src="/absolutelyUnderstandGuitar/images/header.png" alt="headerImage" fetchpriority="high">
         </figure>
         <h1>Absolutely Understand Guitar</h1>
         <h2>A Fan Tribute Page</h2>
