--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./style/style.css">
     <link rel="shortcut icon" href="./images/favicon.jpg" type="image/x-icon">
-    <link rel="preload" as="image" href="./images/header.jpg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -50,7 +49,7 @@
             WELCOME TO THE BEST GUITAR<br>LESSONS PROGRAM!
         </h2>
         <article class="indexTexto1 container-fluid">
-                <h3 data-aos="zoom-in" data-aos-duration="1200">Greetings, fellow guitar enthusiasts! I'm Scotty West.</h3>
+                <h3 data-aos="zoom-in" data-aos-duration="1200">Greetings, fellow guitar enthusiasts! I'm <b>Scotty West.</b></h3>
                 <p data-aos="zoom-in" data-aos-duration="1200">
                     Thank you for your interest in our lessons. These 32 hour-long instruction videos contain<b>all you need to know to truly understand your instrument</b>from the inside-out.
                 </p>
