--- a/pages/about.html
+++ b/pages/about.html
@@ -17,7 +17,7 @@
 <main class="aboutGrid">
     <header class="header">
         <figure class="headerImage">
-            <img src="../images/header.png" alt="Header Image">
+            <img src="../images/header.png" alt="Header Image" fetchpriority="high">
         </figure>        
         <h1>Absolutely Understand Guitar</h1>
         <h2>A Fan Tribute Page</h2>
@@ -41,9 +41,7 @@
         <hr class="headerHr">    
     </header>
     <h2 class="aboutTitle" data-aos="zoom-in" data-aos-duration="1000">
-        <p>
-            The Most Comprehensive and Well Organized <br> Guitar Instruction Program Available Anywhere
-        </p>
+            The Most Comprehensive and Well-Organized <br> Guitar Instruction Program Available <u>Anywhere!</u>
     </h2>
     <hr class="hr1">
     <div class="aboutBanner" data-aos="zoom-in" data-aos-duration="1000">
