--- a/pages/program.html
+++ b/pages/program.html
@@ -18,7 +18,7 @@
 <main class="programGrid">
     <header class="header">
         <figure class="headerImage">
-            <img src="../images/header.png" alt="Header Image">
+            <img src="../images/header.png" alt="Header Image" fetchpriority="high">
         </figure>
         <h1>Absolutely Understand Guitar</h1>
         <h2>A Fan Tribute Page</h2>
