--- a/pages/scotty.html
+++ b/pages/scotty.html
@@ -18,7 +18,7 @@
 <main class="scottyGrid">
     <header class="header">
         <figure class="headerImage">
-            <img src="../images/header.png" alt="Header Image">
+            <img src="../images/header.png" alt="Header Image" fetchpriority="high">
         </figure>
         <h1>Absolutely Understand Guitar</h1>
         <h2>A Fan Tribute Page</h2>
@@ -98,7 +98,7 @@
         <p data-aos="fade-up" data-aos-duration="1500">
             Dan showed me that learning to play the guitar is easy - if you can find someone to explain it to you <u class="fw-bold">the right way.</u>
         </p>
-        <p class="scottyLink">
+        <p class="scottyLink" data-aos="fade-up" data-aos-duration="1500">
             <a href="https://www.absolutelyunderstandguitar.com/index.php/bio" target="_blank">(...)</a>
         </p>
     </section>
