--- a/pages/videos.html
+++ b/pages/videos.html
@@ -18,7 +18,7 @@
 <main class="videosGrid">
     <header class="header">
         <figure class="headerImage">
-            <img src="../images/header.png" alt="Header Image">
+            <img src="../images/header.png" alt="Header Image" fetchpriority="high">
         </figure>
         <h1>Absolutely Understand Guitar</h1>
         <h2>A Fan Tribute Page</h2>
@@ -73,7 +73,7 @@
     <hr class="hr2">
     <section class="videoT3" data-aos="zoom-in" data-aos-duration="1000">
         <h2>
-            <a href="https://www.youtube.com/watch?v=sbQEQHQ5HX4" target="_blank" rel="noopener noreferrer">Some of Scotty's playing with <span>The Experimental Ensemble of Cape Cod</span>!</a>
+            <a href="https://www.youtube.com/watch?v=sbQEQHQ5HX4" target="_blank" rel="noopener noreferrer">Some of Scotty's playing with<br><span>The Experimental Ensemble of Cape Cod</span>!</a>
         </h2>
     </section>
     <div class="video3" data-aos="fade-up" data-aos-duration="1500">
